Fix the bug so that property files from last run is backed up rather than written.

--- a/config.sample
+++ b/config.sample
@@ -39,6 +39,7 @@ property4Special = log
 
 initParaTableFile = initParaTable.dat
 paraTableFile = paraTable.dat
+ffForSimulation = forcefield.DOPC
 ffTemplate = forcefield.temp
 
 [optimization]
