--- a/config.sample
+++ b/config.sample
@@ -1,14 +1,28 @@
-; Sample configuration file for lipid parametrization.
-; The value of an option is assigned under each [section] it related to.
+; A sample configuration file for lipid parametrization
+;
+; The four [sections] (simulation, properties, parameters and optimaztion) must 
+; be explicitly included in this config file.
+; Under each [section], options to perform the optimazation are declared.
+
 
 [simulation]
+
+; Except option "lmp", all other file-related options indicate a path relative 
+; to the "path" option. E.g., "processScript = ../process.sh" points to a 
+; script file in the parent folder of the "path" directory. 
 
 lmp = lammps  
 path = ./simulation
 inFileName = in.2xlipid
-aa = 
+processScript = preProcess.sh 
+
 
 [properties]
+
+; Option "totalProperties" must match the amount of given targeted properties, 
+; which are counted starting from 1.
+; For each targeted property, name can be either identified, or left blank, 
+; which will be automatically assigned as "q_N".  
 
 totalProperties = 4
 
@@ -35,13 +49,20 @@ property4Special = log
 ;property5Special = scaled
 ;property5SpecialArg = 100
 
+
 [parameters]
 
+; All (file-related) options in the "parameters" section is declared relative 
+; to the directory you execute the programme.
+  
 initParaTableFile = initParaTable.dat
 paraTableFile = paraTable.dat
 ffForSimulation = forcefield.DOPC
 ffTemplate = forcefield.temp
 
+
 [optimization]
+
+; Now only the "Nelder-Mead" algorithm is supported.
 
 optMethod = Nelder-Mead
