Added new mode option & corrected executable bug In this patch, I added the extra option "mode" in the simulation section. Mode can take as input either the string "test" or "simulation". If the test is chosen, then it executes the test function as the objective function otherwise it runs a simulation. Also, the lmp option was renamed to executable to make clear and generic the definition of the executable file. Finally, a check for "test" or "simulation" was added in the configuration class, to control the input of the user. If none of the two it exits with error 1.

--- a/testFunction/config.sample
+++ b/testFunction/config.sample
@@ -11,7 +11,8 @@
 ; to the "path" option. E.g., "processScript = ../process.sh" points to a 
 ; script file in the parent folder of the "path" directory. 
 
-lmp = test
+mode = test
+executable =
 path = 
 inFileName = 
 processScript =  
