--- a/example/config.sample
+++ b/example/config.sample
@@ -11,7 +11,8 @@
 ; to the "path" option. E.g., "processScript = ../process.sh" points to a 
 ; script file in the parent folder of the "path" directory. 
 
-lmp = lammps  
+mode = simulation
+executable = lammps  
 path = ./simulation
 inFileName = in.2xlipid
 processScript = preProcess.sh 
