Modified executuble input Modified executable input to accept the whole command the user would like to execute per iteration. In this way, the user is allowed to specify flags, threads, multiple runs through bash scripts etc.

--- a/example/config.sample
+++ b/example/config.sample
@@ -12,7 +12,7 @@
 ; script file in the parent folder of the "path" directory. 
 
 mode = simulation
-executable = lammps  
+execute = lammps -in 
 path = ./simulation
 inFileName = in.2xlipid
 processScript = preProcess.sh 
