--- a/testFunction/config.sample
+++ b/testFunction/config.sample
@@ -12,7 +12,7 @@
 ; script file in the parent folder of the "path" directory. 
 
 mode = test
-executable =
+execute =
 path = 
 inFileName = 
 processScript =  
